Changes made between Gamera File Releases
=========================================

 - fix of possible crash in resize (debian bug #874797)


Version 3.4.3, Mar 08, 2017
----------------------------

 - support for gcc7 (thanks to VincentS)

 - removed overflow of zernike_moments on 32bit systems

 - zernike_moments now also implemented for greyscale image
   (image is inverted so that dark objects get high weights)
   As features do not support greyscale images, the plugin is
   called "zernike_moments_plugin"

 - new plugin hough_lines in category geometry

 - handled errors in arguments of type PointVector more gracefully

 - workaround for crash of progress bar on OSX with wxPython 3.0

 - workaround for GetChildren in wxPython 3.0 returning deleted items

 - icons in gamera_gui now immediately shown without resize
   on OSX with wxpython 3.0

 - photometric tag of TIFF files no longer ignored for onebit TIFFs,
   which could lead to color inversion when reading TIFF images

 - fixed error in reading/writing 16bit greyscale PNG images

 - 16bit RGB PNG images now supported via downscaling
   (fixes Debian bug #785548)

 - reading of tiff images more error robust
   (fixes Debian bug #784795)

 - get() method corrected for Cc's with storage format RLE
   (fixes Debian bug #763440)


Version 3.4.2, Apr 23, 2015
----------------------------

 - updated zlib to version 1.2.8 (only used under Windows)

 - fixed classifier crash on Windows

 - fixed hang with wxpython 3.0 after quitting gamera_gui

 - fixed crash in min_max_location for FLOAT images

 - false_color now defaults to diverging colormap after Moreland, 2009


Version 3.4.1, May 28, 2014
----------------------------

 - ported to Windows again with MS VC and included compile instructions

 - new plugins:
    o kise_block_extraction in pagesegmentation
    o kernel_density, argmax, argmin in listutilities
    o soft_threshold in binarization

 - new features and feature improvements: